--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@nuxt/eslint": "^1.5.2",
+    "@nuxtjs/tailwindcss": "^6.14.0",
     "nuxt": "^3.17.7",
     "vue": "^3.5.17",
     "vue-router": "^4.5.1"
