--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@nuxt/eslint": "^1.5.2",
+    "@nuxt/icon": "^1.15.0",
     "@nuxtjs/tailwindcss": "^6.14.0",
     "nuxt": "^3.17.7",
     "vue": "^3.5.17",
@@ -20,6 +21,7 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "^4.17.0",
+    "@iconify-json/tabler": "^1.2.19",
     "daisyui": "^5.0.46",
     "eslint": "^9.31.0",
     "eslint-plugin-format": "^1.0.1",
