--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "@nuxtjs/tailwindcss": "^6.14.0",
     "nuxt": "^3.17.7",
     "vue": "^3.5.17",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "zod": "^4.0.5"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^4.17.0",
